ensure rsyslog can read the audit log

--- a/templates/etc/audit/auditd.conf.erb
+++ b/templates/etc/audit/auditd.conf.erb
@@ -4,7 +4,8 @@
 
 log_file = /var/log/audit/audit.log
 log_format = RAW
-log_group = root
+# use adm group so that syslog can read the log file
+log_group = adm
 priority_boost = 4
 flush = INCREMENTAL
 freq = 20
